--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     	<div class="photo-inner"><img src="images/photo.png" height="186" width="153" /></div>
                         <h1>Короткий Иван</h1>
                         <h3>Дежурный Инженер ЦОД</h3>
-                        <p>Описание профиля</p>
+                        <p>Услуги по эксплутатации центров обработки данных и оборудования в них.</p>
                     </div>
                     <!-- /About section -->
                      
