--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                          <ul class="timeline">
                             <li>            
                                 <div class="timelineUnit">
-                                    <h4>Graphic Design<span class="timelineDate">2023-2027</span></h4>
+                                    <h4>Московский политехнический университет<span class="timelineDate">2023-2027</span></h4>
                                     <h5>Прикладная информатика</h5>
                                 </div>
                             </li>
